[gd_scene load_steps=4 format=3 uid="uid://ciautqikan3tu"]

[ext_resource type="Script" uid="uid://b4yem1oeoncra" path="res://Scripts/project_window.gd" id="1_td4cr"]
[ext_resource type="PackedScene" uid="uid://cxxfvbsbhm1oh" path="res://Scenes/ProjectTrack.tscn" id="2_ib778"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_td4cr"]

[node name="ProjectWindow" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_td4cr")
track_scene = ExtResource("2_ib778")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -573.0
offset_top = -321.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -553.5
offset_top = -303.5
offset_right = 528.5
offset_bottom = 291.5
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderInfo" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/HeaderInfo"]
layout_mode = 2
text = "Заголовок"

[node name="DeadlineLabel" type="Label" parent="Panel/VBoxContainer/HeaderInfo"]
layout_mode = 2
text = "Дедлайн: День 5\""

[node name="BudgetLabel" type="Label" parent="Panel/VBoxContainer/HeaderInfo"]
layout_mode = 2
text = "Бюджет: $5000"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TimelineHeader" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TracksContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Footer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="Panel/VBoxContainer/Footer"]
layout_mode = 2
text = "Расходы: $0"

[node name="ProfitLabel" type="Label" parent="Panel/VBoxContainer/Footer"]
layout_mode = 2
text = "Прибыль: $5000"

[node name="StartButton" type="Button" parent="Panel/VBoxContainer/Footer"]
layout_mode = 2
text = "Начать проект"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/Footer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxLine_td4cr")
text = "Отказаться"

[node name="CloseWindowButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -18.0
offset_bottom = 31.0
grow_horizontal = 0
text = " Х "
